--- a/data/tairos/enemies.yml
+++ b/data/tairos/enemies.yml
@@ -22,17 +22,17 @@
   :line1: "<b>Hunter</b>: Least cards in hand"
   :line2: "<b>Engage</b>: <b>Discard 1</b>"
   :line3: "Ignores all damage from attacks"
-  :line4: "with 3 or less power."
+  :line4: "with 5 or more power."
 -
   :deck: "Enemy"
-  :title: "Armored Orc"
+  :title: "Razor Knight"
   :type: "Enemy"
-  :icon: "orc-head"
+  :icon: "brutal-helm"
   :border_color: "#444"
   :hp: "10"
-  :attack: "5"
+  :attack: "4"
   :line1: "<b>Block 3</b>"
-  :line2: "When <i>Armored Orc</i> is attacked,"
+  :line2: "When <i>Razor Knight</i> is attacked,"
   :line3: "the attacker suffers 1 damage."
   :line4: ""
 -
@@ -41,7 +41,7 @@
   :type: "Enemy"
   :icon: "ifrit"
   :border_color: "#444"
-  :hp: "13"
+  :hp: "12"
   :attack: "5"
   :line1: "<b>Hunter</b>: Most <b>Health</b>"
   :line2: "<b>Encounter</b>: The player with the"
@@ -56,9 +56,9 @@
   :hp: "15"
   :attack: "4"
   :line1: "<b>Hunter</b>: Most cards in hand"
-  :line2: "Any player who suffers damage"
-  :line3: "from <i>Mana Wraith</i> must"
-  :line4: "<b>Mill 3</b>."
+  :line2: "After <i>Mana Wraith</i> attacks,"
+  :line3: "the target must <b>Mill 3</b>."
+  :line4: ""
 -
   :deck: "Enemy"
   :title: "Serpent Assassin"
@@ -99,19 +99,19 @@
   :deck: "Enemy"
   :title: "Black Guard"
   :type: "Enemy"
-  :icon: "battle-axe" # TODO
+  :icon: "black-knight-helm"
   :border_color: "#444"
   :hp: "15"
   :attack: "3"
   :line1: "<b>Block 2</b>"
   :line2: "Other enemies cannot be"
-  :line3: "attacked while <b>Black Guard</b>"
+  :line3: "attacked while <i>Black Guard</i>"
   :line4: "is alive."
 -
   :deck: "Enemy"
   :title: "Flamespitter"
   :type: "Enemy"
-  :icon: "battle-axe" # TODO
+  :icon: "spark-spirit"
   :border_color: "#444"
   :hp: "12"
   :attack: "2"
@@ -123,14 +123,14 @@
   :deck: "Enemy"
   :title: "Voidling"
   :type: "Enemy"
-  :icon: "battle-axe" # TODO
+  :icon: "infested-mass"
   :border_color: "#444"
   :hp: "10"
   :attack: "4"
   :line1: "Can only be damaged by the"
   :line2: "player it's engaged with."
   :line3: "When defeated, the player it's"
-  :line4: "engaged with gains <b>Fatigue</b>."
+  :line4: "engaged with must <b>Discard 1</b>."
 # Elite Enemies
 -
   :deck: "Enemy"
@@ -158,9 +158,9 @@
   :line4: "the damage it dealt."
 -
   :deck: "Enemy"
-  :title: "Warlord"
+  :title: "Oni Warlord"
   :type: "Elite Enemy"
-  :icon: "overlord-helm"
+  :icon: "oni"
   :border_color: "#444"
   :hp: "20"
   :attack: "4"
@@ -175,8 +175,8 @@
   :icon: "bear-head"
   :border_color: "#444"
   :hp: "22"
-  :attack: "5"
+  :attack: "4"
   :line1: "<b>Block 2</b>"
-  :line2: "Cannot be stunned."
-  :line3: "When <i>Armored Bear</i> attacks,"
-  :line4: "target must <b>Discard 1</b>."
+  :line2: "Ignores player card effects."
+  :line3: "After <i>Armored Bear</i> attacks,"
+  :line4: "the target must <b>Discard 1</b>."
