--- a/data/tairos/races.yml
+++ b/data/tairos/races.yml
@@ -19,8 +19,8 @@
   :line1: "<i>Game Start</i>: <b>Charge 2</b>"
   :line2: "<i>Magical</i> — Passive"
   :line3: "After you <b>Combo</b>, <b>Charge 1</b>."
-  :line4: "<i>Detect</i> — 1 Charge"
-  :line5: "<b>Scry 1</b>"
+  :line4: "<i>TODO</i> — 1 Charge"
+  :line5: ""
   :line6: "<i>once per turn</i>"
 -
   :deck: "Race"
@@ -42,7 +42,31 @@
   :border_color: "#fff"
   :line1: "<i>Game Start</i>: <b>Draw 1</b>, <b>Charge 1</b>"
   :line2: "<i>Nimble</i> — Passive"
-  :line3: "After refreshing a deck, <b>Draw 1</b>."
+  :line3: "After you <b>Refresh</b>, <b>Draw 1</b>."
   :line4: "<i>Scurry</i> — 1 Charge"
   :line5: "Swap places with an ally."
+  :line6: "<i>once per turn</i>"
+-
+  :deck: "Race"
+  :title: "Orc"
+  :type: "Race"
+  :icon: "orc-head"
+  :border_color: "#fff"
+  :line1: "<i>Game Start</i>: <b>+2 Health</b>, <b>Draw 1</b>"
+  :line2: "<i>Aggressive</i> — Passive"
+  :line3: "Once per turn, <b>Attack 1</b>"
+  :line4: "<i>Rage</i> — 1 Charge"
+  :line5: "<b>Discard 1</b> to gain <b>+3 Power</b>"
+  :line6: "<i>once per turn</i>"
+-
+  :deck: "Race"
+  :title: "Goblin"
+  :type: "Race"
+  :icon: "goblin-head"
+  :border_color: "#fff"
+  :line1: "<i>Game Start</i>: <b>Scry 4</b>"
+  :line2: "<i>TODO</i> — Passive"
+  :line3: ""
+  :line4: "<i>Scout</i> — 1 Charge"
+  :line5: "<b>Scry 2</b>"
   :line6: "<i>once per turn</i>"
