more cleanup & icons

--- a/data/tairos/enemies.yml
+++ b/data/tairos/enemies.yml
@@ -6,11 +6,11 @@
   :icon: "toad-teeth"
   :border_color: "#444"
   :hp: "12"
-  :attack: "4"
-  :line1: "When <i>Toxic Toad</i> is defeated,"
-  :line2: "the player it's engaged with"
-  :line3: "must <b>Discard 2</b> or suffer"
-  :line4: "5 damage."
+  :attack: "3"
+  :line1: "<b>Engage</b>: <b>Mill 2</b>"
+  :line2: "<b>On Defeat</b>: The engaged"
+  :line3: "player must <b>Discard 2</b>"
+  :line4: "or suffer 4 damage."
 -
   :deck: "Enemy"
   :title: "Harpy"
@@ -29,9 +29,9 @@
   :type: "Enemy"
   :icon: "brutal-helm"
   :border_color: "#444"
-  :hp: "10"
-  :attack: "4"
-  :line1: "<b>Block 3</b>"
+  :hp: "14"
+  :attack: "3"
+  :line1: "<b>Block 1</b>"
   :line2: "When <i>Razor Knight</i> is attacked,"
   :line3: "the attacker suffers 1 damage."
   :line4: ""
@@ -42,23 +42,23 @@
   :icon: "ifrit"
   :border_color: "#444"
   :hp: "12"
-  :attack: "5"
-  :line1: "<b>Hunter</b>: Most <b>Health</b>"
-  :line2: "<b>Encounter</b>: The player with the"
-  :line3: "most <b>Health</b> suffers 3 damage."
-  :line4: ""
+  :attack: "3"
+  :line1: "<b>Encounter</b>: ALL players suffer"
+  :line2: "1 damage."
+  :line3: "<b>Hunter</b>: Most <b>Health</b>"
+  :line4: "Ignores <b>Block</b> when attacking."
 -
   :deck: "Enemy"
   :title: "Mana Wraith"
   :type: "Enemy"
   :icon: "spectre"
   :border_color: "#444"
-  :hp: "15"
+  :hp: "14"
   :attack: "4"
-  :line1: "<b>Hunter</b>: Most cards in hand"
-  :line2: "After <i>Mana Wraith</i> attacks,"
-  :line3: "the target must <b>Mill 3</b>."
-  :line4: ""
+  :line1: "<b>Encounter</b>: ALL players <b>Mill 2</b>"
+  :line2: "<b>Hunter</b>: Most cards in hand"
+  :line3: "After <i>Mana Wraith</i> attacks,"
+  :line4: "the target must <b>Mill 3</b>."
 -
   :deck: "Enemy"
   :title: "Serpent Assassin"
@@ -78,7 +78,7 @@
   :icon: "gooey-daemon"
   :border_color: "#444"
   :hp: "14"
-  :attack: "3"
+  :attack: "2"
   :line1: "<b>Block 1</b>"
   :line2: "Cannot be disengaged."
   :line3: "<b>Round End</b>: The engaged"
@@ -101,9 +101,9 @@
   :type: "Enemy"
   :icon: "black-knight-helm"
   :border_color: "#444"
-  :hp: "15"
-  :attack: "3"
-  :line1: "<b>Block 2</b>"
+  :hp: "12"
+  :attack: "2"
+  :line1: "<b>Block 3</b>"
   :line2: "Other enemies cannot be"
   :line3: "attacked while <i>Black Guard</i>"
   :line4: "is alive."
@@ -115,9 +115,9 @@
   :border_color: "#444"
   :hp: "12"
   :attack: "2"
-  :line1: "After <i>Flamespitter</i> attacks,"
-  :line2: "ALL players suffer 1 damage."
-  :line3: ""
+  :line1: "<b>Engage</b>: Suffer 1 damage."
+  :line2: "After <i>Flamespitter</i> attacks,"
+  :line3: "ALL players suffer 1 damage."
   :line4: ""
 -
   :deck: "Enemy"
@@ -129,8 +129,8 @@
   :attack: "4"
   :line1: "Can only be damaged by the"
   :line2: "player it's engaged with."
-  :line3: "When defeated, the player it's"
-  :line4: "engaged with must <b>Discard 1</b>."
+  :line3: "<b>On Defeat</b>: The engaged"
+  :line4: "player must <b>Mill 5</b>."
 # Elite Enemies
 -
   :deck: "Enemy"
@@ -142,8 +142,8 @@
   :attack: "2"
   :line1: "<b>Block 1</b>"
   :line2: "Cannot be engaged."
-  :line3: "Attacks ALL players at once."
-  :line4: ""
+  :line3: "Immune to artifacts."
+  :line4: "Attacks ALL players at once."
 -
   :deck: "Enemy"
   :title: "Soul Reaper"
@@ -151,7 +151,7 @@
   :icon: "grim-reaper"
   :border_color: "#444"
   :hp: "20"
-  :attack: "6"
+  :attack: "5"
   :line1: "<b>Hunter</b>: Least <b>Health</b>"
   :line2: "After <i>Soul Reaper</i> attacks,"
   :line3: "it gains <b>Health</b> equal to"
@@ -174,9 +174,9 @@
   :type: "Elite Enemy"
   :icon: "bear-head"
   :border_color: "#444"
-  :hp: "22"
+  :hp: "20"
   :attack: "4"
   :line1: "<b>Block 2</b>"
-  :line2: "Ignores player card effects."
+  :line2: "Immune to player card effects."
   :line3: "After <i>Armored Bear</i> attacks,"
   :line4: "the target must <b>Discard 1</b>."
