--- a/data/tairos/races.yml
+++ b/data/tairos/races.yml
@@ -8,7 +8,7 @@
   :line2: "<i>Adaptive</i> — Passive"
   :line3: "+2 max hand size"
   :line4: "<i>Improvise</i> —  1 Charge"
-  :line5: "<b>Draw 1</b> then <b>Discard 1</b>"
+  :line5: "Suffer 1 damage to <b>Draw 1</b>."
   :line6: "<i>once per turn</i>"
 -
   :deck: "Race"
