cleanup — all but Trailwarden!

--- a/data/tairos/races.yml
+++ b/data/tairos/races.yml
@@ -29,10 +29,10 @@
   :icon: "dwarf-face"
   :border_color: "#fff"
   :line1: "<i>Game Start</i>: <b>+4 Health</b>"
-  :line2: "<i>Stubborn</i> — Passive"
+  :line2: "<i>Tireless</i> — Passive"
   :line3: "Ignore enemy <b>Discard</b> effects."
   :line4: "<i>Exert</i> — 1 Charge"
-  :line5: "<b>+1 Power</b> or <b>+1 Block</b>"
+  :line5: "<b>+1 Block</b>, <b>+1 Power</b> this round."
   :line6: "<i>once per turn</i>"
 -
   :deck: "Race"
@@ -53,8 +53,8 @@
   :icon: "orc-head"
   :border_color: "#fff"
   :line1: "<i>Game Start</i>: <b>+2 Health</b>, <b>Draw 1</b>"
-  :line2: "<i>Aggressive</i> — Passive"
-  :line3: "Once per turn, <b>Attack 1</b>"
+  :line2: "<i>Brutal</i> — Passive"
+  :line3: "Your attacks ignore 1 <b>Block</b>."
   :line4: "<i>Rage</i> — 1 Charge"
   :line5: "<b>Discard 1</b> to gain <b>+3 Power</b>"
   :line6: "<i>once per turn</i>"
@@ -65,8 +65,8 @@
   :icon: "goblin-head"
   :border_color: "#fff"
   :line1: "<i>Game Start</i>: <b>Scry 4</b>"
-  :line2: "<i>TODO</i> — Passive"
-  :line3: ""
+  :line2: "<i>Scrappy</i> — Passive"
+  :line3: "Once per turn, <b>Attack 1</b>"
   :line4: "<i>Scout</i> — 1 Charge"
   :line5: "<b>Scry 2</b>"
   :line6: "<i>once per turn</i>"
