--- a/data/tairos/player_cards.yml
+++ b/data/tairos/player_cards.yml
@@ -6,7 +6,7 @@
   :title: "Strike"
   :type: "Action"
   :icon: "battle-axe"
-  :border_color: "#b10"
+  :border_color: "#9c2317"
   :line1: "<b>Attack 3</b>"
   :line2: "If the target attacked you"
   :line3: "this round, gain <b>+2 Power</b>."
@@ -18,7 +18,7 @@
   :title: "Defend"
   :type: "Reaction"
   :icon: "checked-shield"
-  :border_color: "#b10"
+  :border_color: "#9c2317"
   :line1: "Play when an enemy attacks."
   :line2: "<b>Block 2</b>"
   :line3: "If you are the target of"
@@ -30,7 +30,7 @@
   :title: "Bash"
   :type: "Action"
   :icon: "shield-bash"
-  :border_color: "#b10"
+  :border_color: "#9c2317"
   :line1: "Target enemy who attacked you"
   :line2: "this round or is engaged with"
   :line3: "you can't attack next round."
@@ -44,7 +44,7 @@
   :title: "Shoot"
   :type: "Action"
   :icon: "high-shot"
-  :border_color: "#ccc"
+  :border_color: "#666"
   :line1: "<b>Attack 3</b>"
   :line2: "If you've taken no damage"
   :line3: "this round, gain <b>+2 Power</b>."
@@ -56,7 +56,7 @@
   :title: "Dodge"
   :type: "Reaction"
   :icon: "dodging"
-  :border_color: "#ccc"
+  :border_color: "#666"
   :line1: "Play when you are targeted."
   :line2: "<b>Block 2</b> and/or prevent"
   :line3: "one effect targeting you."
@@ -68,7 +68,7 @@
   :title: "Dash"
   :type: "Action"
   :icon: "wingfoot"
-  :border_color: "#ccc"
+  :border_color: "#666"
   :line1: "<b>Draw 2</b>"
   :line2: "You may take another <b>Action</b>."
   :line3: "<i>once per round</i>"
@@ -82,7 +82,7 @@
   :title: "Blast"
   :type: "Action"
   :icon: "hypersonic-bolt"
-  :border_color: "#02f"
+  :border_color: "#2e65b3"
   :line1: "<b>Attack 3</b>"
   :line2: "If the target has <b>Block</b>,"
   :line3: "gain <b>+2 Power</b>."
@@ -94,7 +94,7 @@
   :title: "Protect"
   :type: "Reaction"
   :icon: "aura"
-  :border_color: "#02f"
+  :border_color: "#2e65b3"
   :line1: "Play when an enemy attacks."
   :line2: "<b>Block 1</b>"
   :line3: "You may discard up to 2 cards"
@@ -106,7 +106,7 @@
   :title: "Unleash"
   :type: "Action"
   :icon: "glowing-hands"
-  :border_color: "#02f"
+  :border_color: "#2e65b3"
   :line1: "<b>Attack 2</b>"
   :line2: "You may discard up to 2 cards"
   :line3: "to gain <b>+3 Power</b> per card."
@@ -161,7 +161,7 @@
   :title: "Crush"
   :type: "Action"
   :icon: "hammer-drop"
-  :border_color: "#b10"
+  :border_color: "#9c2317"
   :line1: "<b>Attack 3</b>"
   :line2: "Any player who attacks the"
   :line3: "target this round may <b>Draw 1</b>."
@@ -173,7 +173,7 @@
   :title: "Endure"
   :type: "Reaction"
   :icon: "rock-golem"
-  :border_color: "#b10"
+  :border_color: "#9c2317"
   :line1: "Play when you are attacked."
   :line2: "<b>Block 2</b>"
   :line3: "If you have less than 8 HP,"
@@ -185,7 +185,7 @@
   :title: "Swig"
   :type: "Reaction"
   :icon: "brandy-bottle"
-  :border_color: "#b10"
+  :border_color: "#9c2317"
   :line1: "Play at the start of your turn."
   :line2: "<b>Restore Self 1</b>"
   :line3: "Your next attack this round"
@@ -199,7 +199,7 @@
   :title: "Pierce"
   :type: "Action"
   :icon: "flying-dagger"
-  :border_color: "#ccc"
+  :border_color: "#666"
   :line1: "<b>Attack 1</b>"
   :line2: "<b>Draw 1</b>"
   :line3: "You may take another <b>Action</b>."
@@ -211,7 +211,7 @@
   :title: "Venomize"
   :type: "Reaction"
   :icon: "dripping-blade"
-  :border_color: "#ccc"
+  :border_color: "#666"
   :line1: "Play when you attack."
   :line2: "This attack gains <b>+2 Power</b>"
   :line3: "and ignores <b>Block</b>."
@@ -223,7 +223,7 @@
   :title: "Reposition"
   :type: "Reaction"
   :icon: "jump-across"
-  :border_color: "#ccc"
+  :border_color: "#666"
   :line1: "Play when you engage"
   :line2: "an enemy."
   :line3: "<b>Draw 2</b>"
@@ -237,7 +237,7 @@
   :title: "Fear"
   :type: "Action"
   :icon: "daemon-skull"
-  :border_color: "#02f"
+  :border_color: "#2e65b3"
   :line1: "<b>Attack 3</b>"
   :line2: "If the target has less than"
   :line3: "10 HP, gain <b>+2 Power</b>."
@@ -249,7 +249,7 @@
   :title: "Charm"
   :type: "Reaction"
   :icon: "star-swirl"
-  :border_color: "#02f"
+  :border_color: "#2e65b3"
   :line1: "Play when you are attacked."
   :line2: "Your attacker targets an ally"
   :line3: "instead. That ally gains <b>Block 2</b>."
@@ -261,7 +261,7 @@
   :title: "Reflect"
   :type: "???"
   :icon: "mirror-mirror"
-  :border_color: "#02f"
+  :border_color: "#2e65b3"
   :line1: "Copy a card that was"
   :line2: "played this round."
   :line3: "<i>OR</i>"
@@ -275,7 +275,7 @@
   :title: "Accompany"
   :type: "Reaction"
   :icon: "ages"
-  :border_color: "#4d4"
+  :border_color: "#492"
   :line1: "Play when an ally is attacked."
   :line2: "You may become the target."
   :line3: "<b>Block 1</b>, <b>Attack 1</b>, and <b>Draw 1</b>"
@@ -287,7 +287,7 @@
   :title: "Recover"
   :type: "Action"
   :icon: "rapidshare-arrow"
-  :border_color: "#4d4"
+  :border_color: "#492"
   :line1: "<b>Restore All 1</b>"
   :line2: "Each player may place 1 of their"
   :line3: "discarded cards (other than"
@@ -299,7 +299,7 @@
   :title: "Resupply"
   :type: "Action"
   :icon: "knapsack"
-  :border_color: "#4d4"
+  :border_color: "#492"
   :line1: "Target ally may <b>Draw 2</b>."
   :line2: "You may take another <b>Action</b>."
   :line3: "<i>once per round</i>"
@@ -316,7 +316,7 @@
   :title: "Tackle"
   :type: "Action"
   :icon: "charging-bull"
-  :border_color: "#f31"
+  :border_color: "#9c2317"
   :line1: "<b>Attack 5</b>"
   :line2: "You suffer 1 damage."
   :line3: "<b>Combo</b>: <i>Takedown</i>"
@@ -328,7 +328,7 @@
   :title: "Flurry"
   :type: "Action"
   :icon: "punch-blast"
-  :border_color: "#f31"
+  :border_color: "#9c2317"
   :line1: "<b>Attack 2</b>"
   :line2: "<b>Mill</b> up to 3 cards to gain"
   :line3: "<b>+1 Power</b> per card."
@@ -340,7 +340,7 @@
   :title: "Counter"
   :type: "Reaction"
   :icon: "thrust-bend"
-  :border_color: "#f31"
+  :border_color: "#9c2317"
   :line1: "Play when you are attacked."
   :line2: "<b>Attack 2</b> (target your attacker)"
   :line3: "<b>Draw 1</b>"
@@ -392,7 +392,7 @@
   :title: "Embue"
   :type: "Action"
   :icon: "magic-swirl"
-  :border_color: "#02f"
+  :border_color: "#2e65b3"
   :line1: "<b>Attack 2</b>"
   :line2: "<b>Charge</b> this card."
   :line3: "<b>+1 Power</b>"
@@ -404,7 +404,7 @@
   :title: "Observe"
   :type: "Reaction"
   :icon: "steampunk-goggles"
-  :border_color: "#02f"
+  :border_color: "#2e65b3"
   :line1: "Play when you are attacked."
   :line2: "<b>Block 1</b>"
   :line3: "<b>Charge</b> this card."
@@ -416,7 +416,7 @@
   :title: "Tinker"
   :type: "Action"
   :icon: "anvil-impact"
-  :border_color: "#02f"
+  :border_color: "#2e65b3"
   :line1: "<b>Scry 3</b>"
   :line2: "<b>Restore Self 1</b>"
   :line3: "You may swap your artifact"
@@ -430,7 +430,7 @@
   :title: "Contaminate"
   :type: "Action"
   :icon: "biohazard"
-  :border_color: "#4d4"
+  :border_color: "#492"
   :line1: "The next attack on target"
   :line2: "enemy gains <b>+4 Power</b>."
   :line3: "<b>Combo</b>: <i>Disseminate</i>"
@@ -442,7 +442,7 @@
   :title: "Invigorate"
   :type: "Action"
   :icon: "potion-ball"
-  :border_color: "#4d4"
+  :border_color: "#492"
   :line1: "<b>Restore 3</b>"
   :line2: "The target must <b>Discard 1</b>."
   :line3: "<b>Restore Self 1</b>"
@@ -454,7 +454,7 @@
   :title: "Mix"
   :type: "Action"
   :icon: "pestle-mortar"
-  :border_color: "#4d4"
+  :border_color: "#492"
   :line1: "Give an ally a card from"
   :line2: "your hand, then"
   :line3: "<b>Draw 2</b> <i>from their decks</i>."
@@ -471,7 +471,7 @@
   :title: "Slash"
   :type: "Action"
   :icon: "triple-claws"
-  :border_color: "#b10"
+  :border_color: "#9c2317"
   :line1: "<b>Attack 3</b>"
   :line2: "If the target does NOT have"
   :line3: "<b>Block</b>, gain <b>+2 Power</b>."
@@ -483,7 +483,7 @@
   :title: "Sniff"
   :type: "Action"
   :icon: "snout"
-  :border_color: "#b10"
+  :border_color: "#9c2317"
   :line1: "<b>Scry 2</b>"
   :line2: "<b>Draw 1</b>"
   :line3: "You may take another <b>Action</b>."
@@ -495,7 +495,7 @@
   :title: "Glide"
   :type: "Reaction"
   :icon: "spiky-wing"
-  :border_color: "#b10"
+  :border_color: "#9c2317"
   :line1: "Play when you are attacked."
   :line2: "You may immediately play"
   :line3: "an <b>Action</b> from your hand."
@@ -509,7 +509,7 @@
   :title: "Attack Trap"
   :type: "Action"
   :icon: "battle-axe" # TODO
-  :border_color: "#ccc"
+  :border_color: "#666"
   :line1: "TODO"
   :line2: ""
   :line3: ""
@@ -521,7 +521,7 @@
   :title: "Defense Trap"
   :type: "Reaction"
   :icon: "battle-axe" # TODO
-  :border_color: "#ccc"
+  :border_color: "#666"
   :line1: "TODO"
   :line2: ""
   :line3: ""
@@ -533,7 +533,7 @@
   :title: "Utility"
   :type: "Action"
   :icon: "battle-axe" # TODO
-  :border_color: "#ccc"
+  :border_color: "#666"
   :line1: "Something to do with"
   :line2: "affecting the landscape?"
   :line3: ""
@@ -547,7 +547,7 @@
   :title: "Fire"
   :type: "Action"
   :icon: "flamer"
-  :border_color: "#02f"
+  :border_color: "#2e65b3"
   :line1: "<b>Attack 3</b>"
   :line2: "The next attack on this enemy"
   :line3: "this round gains <b>+2 Power</b>."
@@ -559,7 +559,7 @@
   :title: "Frost"
   :type: "Reaction"
   :icon: "beveled-star"
-  :border_color: "#02f"
+  :border_color: "#2e65b3"
   :line1: "Play when you are attacked."
   :line2: "<b>Block 1</b>"
   :line3: "Your attacker suffers 2 damage."
@@ -571,7 +571,7 @@
   :title: "Shock"
   :type: "Action"
   :icon: "electric"
-  :border_color: "#02f"
+  :border_color: "#2e65b3"
   :line1: "<b>Attack All 1</b>"
   :line2: "Spend 1-3 charges to gain"
   :line3: "<b>+1 Power</b> per charge."
@@ -585,7 +585,7 @@
   :title: "Wasp / Sting"
   :type: "Action"
   :icon: "wasp-sting"
-  :border_color: "#4d4"
+  :border_color: "#492"
   :line1: "<b>Attack 3</b>"
   :line2: "Gain <b>+1 Power</b> for each"
   :line3: "<i>Wasp / Sting</i> in your"
@@ -597,7 +597,7 @@
   :title: "Mosquito / Bite"
   :type: "Action"
   :icon: "cigale"
-  :border_color: "#4d4"
+  :border_color: "#492"
   :line1: "<b>Attack 2</b>"
   :line2: "<b>Restore Self 2</b>"
   :line3: ""
@@ -609,7 +609,7 @@
   :title: "Spider / Web"
   :type: "Reaction"
   :icon: "spider-alt"
-  :border_color: "#4d4"
+  :border_color: "#492"
   :line1: "Play when an enemy attacks."
   :line2: "<b>Block 1</b>"
   :line3: "Anyone may become the target"
