WIP for printing

--- a/data/tairos/artifacts.yml
+++ b/data/tairos/artifacts.yml
@@ -82,18 +82,18 @@
   :line4: "<b>Draw 1</b>."
   :line5: "If you are the owner,"
   :line6: "<b>Draw 2</b> instead."
--
-  :deck: "Artifact"
-  :title: "Tome of Tactics"
-  :type: "Artifact"
-  :icon: "enlightenment"
-  :border_color: "#ffc000"
-  :line1: "<i>Regroup</i> — 3 Charge"
-  :line2: "<b>Draw 3</b> then <b>Discard 2</b>"
-  :line3: "<i>Tactical Retreat</i> — Passive"
-  :line4: "When you <b>Refresh</b> a deck, you"
-  :line5: "may leave up to 4 cards in"
-  :line6: "its discard pile."
+# -
+#   :deck: "Artifact"
+#   :title: "Tome of Tactics"
+#   :type: "Artifact"
+#   :icon: "enlightenment"
+#   :border_color: "#ffc000"
+#   :line1: "<i>Regroup</i> — 3 Charge"
+#   :line2: "<b>Draw 3</b> then <b>Discard 2</b>"
+#   :line3: "<i>Tactical Retreat</i> — Passive"
+#   :line4: "When you <b>Refresh</b> a deck, you"
+#   :line5: "may leave up to 4 cards in"
+#   :line6: "its discard pile."
 -
   :deck: "Artifact"
   :title: "Golden Hourglass"
