--- a/data/tairos/player_cards.yml
+++ b/data/tairos/player_cards.yml
@@ -503,43 +503,43 @@
   :line5: "<b>Combo</b>: <i>Maneuver</i>"
   :line6: "<b>+2 Block</b> and <b>Draw 1</b>"
 
-# TODO - BLACK
--
-  :deck: "Trailwarden"
-  :title: "Attack Trap"
-  :type: "Action"
-  :icon: "battle-axe" # TODO
-  :border_color: "#666"
-  :line1: "TODO"
-  :line2: ""
-  :line3: ""
-  :line4: ""
-  :line5: ""
-  :line6: ""
--
-  :deck: "Trailwarden"
-  :title: "Defense Trap"
-  :type: "Reaction"
-  :icon: "battle-axe" # TODO
-  :border_color: "#666"
-  :line1: "TODO"
-  :line2: ""
-  :line3: ""
-  :line4: ""
-  :line5: ""
-  :line6: ""
--
-  :deck: "Trailwarden"
-  :title: "Utility"
-  :type: "Action"
-  :icon: "battle-axe" # TODO
-  :border_color: "#666"
-  :line1: "Something to do with"
-  :line2: "affecting the landscape?"
-  :line3: ""
-  :line4: ""
-  :line5: ""
-  :line6: ""
+# # TODO - BLACK
+# -
+#   :deck: "Trailwarden"
+#   :title: "Attack Trap"
+#   :type: "Action"
+#   :icon: "battle-axe" # TODO
+#   :border_color: "#666"
+#   :line1: "TODO"
+#   :line2: ""
+#   :line3: ""
+#   :line4: ""
+#   :line5: ""
+#   :line6: ""
+# -
+#   :deck: "Trailwarden"
+#   :title: "Defense Trap"
+#   :type: "Reaction"
+#   :icon: "battle-axe" # TODO
+#   :border_color: "#666"
+#   :line1: "TODO"
+#   :line2: ""
+#   :line3: ""
+#   :line4: ""
+#   :line5: ""
+#   :line6: ""
+# -
+#   :deck: "Trailwarden"
+#   :title: "Utility"
+#   :type: "Action"
+#   :icon: "battle-axe" # TODO
+#   :border_color: "#666"
+#   :line1: "Something to do with"
+#   :line2: "affecting the landscape?"
+#   :line3: ""
+#   :line4: ""
+#   :line5: ""
+#   :line6: ""
 
 # Elementalist - BLUE
 -
